tests/errors/string_58/SETCHAR4.src
.IPPcode21

DEFVAR GF@str
MOVE GF@str string@ABCD
SETCHAR GF@str int@4 string@